# pdftrim

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
docs/: release_procedure.md
src/: cli.rs  main.rs
tests/: cli.rs
tests/pdf/: README.md
