[package]
name = "pdftrim"
version = "1.0.0-rc.1"
edition = "2021"
description = "Removes white margins from PDF files without inflating file sizes"
repository = "https://github.com/ciffelia/pdftrim"
license = "MIT OR Apache-2.0"
keywords = ["pdf", "trim", "crop"]
categories = ["command-line-utilities"]
exclude = ["/.github", "/.vscode", "/.gitignore"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.44"
env_logger = "0.11.6"
log = "0.4.25"
lopdf = "0.35.0"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
