[package]
name = "pdftrim"
version = "1.0.0"
edition = "2021"
description = "Removes white margins from PDF files without inflating file sizes"
repository = "https://github.com/ciffelia/pdftrim"
license = "MIT OR Apache-2.0"
keywords = ["pdf", "trim", "crop"]
categories = ["command-line-utilities"]
exclude = ["/.github", "/.vscode", "/.gitignore"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.44"
env_logger = { version = "0.11.6", default-features = false, features = [
  "auto-color",
  "humantime",
] }
log = "0.4.25"
lopdf = "0.35.0"
regex-lite = "0.1.6"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.16.0"
